// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the AllQuotesOpened event 1`] = `
Array [
  Array [
    "Unified SwapBridge All Quotes Opened",
    Object {
      "action_type": "crosschain-v1",
      "can_submit": false,
      "chain_id_destination": null,
      "chain_id_source": "eip155:1",
      "custom_slippage": false,
      "gas_included": false,
      "initial_load_time_all_quotes": 0,
      "is_hardware_wallet": false,
      "price_impact": 6,
      "quotes_count": 0,
      "quotes_list": Array [],
      "slippage_limit": undefined,
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": null,
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
    },
  ],
]
`;

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the AllQuotesSorted event 1`] = `
Array [
  Array [
    "Unified SwapBridge All Quotes Sorted",
    Object {
      "action_type": "crosschain-v1",
      "best_quote_provider": "provider_bridge2",
      "can_submit": false,
      "chain_id_destination": null,
      "chain_id_source": "eip155:1",
      "custom_slippage": false,
      "gas_included": false,
      "initial_load_time_all_quotes": 0,
      "is_hardware_wallet": false,
      "price_impact": 6,
      "quotes_count": 0,
      "quotes_list": Array [],
      "slippage_limit": undefined,
      "sort_order": "cost_ascending",
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": null,
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
    },
  ],
]
`;

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the ButtonClicked event 1`] = `
Array [
  Array [
    "Unified SwapBridge Button Clicked",
    Object {
      "action_type": "crosschain-v1",
      "chain_id_destination": null,
      "chain_id_source": "eip155:1",
      "location": "Main View",
      "token_address_destination": null,
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": null,
      "token_symbol_source": "ETH",
    },
  ],
]
`;

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the Completed event 1`] = `
Array [
  Array [
    "Unified SwapBridge Completed",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 10,
      "approval_transaction": "PENDING",
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "destination_transaction": "PENDING",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 6,
      "provider": "provider_bridge",
      "quote_vs_execution_ratio": 1,
      "quoted_time_minutes": 0,
      "quoted_vs_used_gas_ratio": 1,
      "source_transaction": "PENDING",
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_actual_gas": 10,
      "usd_actual_return": 100,
      "usd_amount_source": 100,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the Failed event 1`] = `
Array [
  Array [
    "Unified SwapBridge Failed",
    Object {
      "action_type": "crosschain-v1",
      "actual_time_minutes": 10,
      "allowance_reset_transaction": "PENDING",
      "approval_transaction": "PENDING",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "destination_transaction": "PENDING",
      "error_message": "error_message",
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "provider_bridge",
      "quoted_time_minutes": 0,
      "source_transaction": "PENDING",
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/slip44:501",
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the InputSourceDestinationFlipped event 1`] = `
Array [
  Array [
    "Unified SwapBridge Source Destination Flipped",
    Object {
      "action_type": "crosschain-v1",
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:1",
      "security_warnings": Array [
        "warning1",
      ],
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
    },
  ],
]
`;

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the PageViewed event 1`] = `
Array [
  Array [
    "Unified SwapBridge Page Viewed",
    Object {
      "abc": 1,
      "action_type": "crosschain-v1",
      "chain_id_destination": null,
      "chain_id_source": "eip155:1",
      "token_address_destination": null,
      "token_address_source": "eip155:1/slip44:60",
    },
  ],
]
`;

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the QuoteSelected event 1`] = `
Array [
  Array [
    "Unified SwapBridge Quote Selected",
    Object {
      "action_type": "crosschain-v1",
      "best_quote_provider": "provider_bridge2",
      "can_submit": false,
      "chain_id_destination": null,
      "chain_id_source": "eip155:1",
      "custom_slippage": false,
      "gas_included": false,
      "initial_load_time_all_quotes": 0,
      "is_best_quote": true,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "provider_bridge",
      "quoted_time_minutes": 10,
      "quotes_count": 0,
      "quotes_list": Array [],
      "slippage_limit": undefined,
      "swap_type": "crosschain",
      "token_address_destination": null,
      "token_address_source": "eip155:1/slip44:60",
      "usd_quoted_gas": 0,
      "usd_quoted_return": 100,
    },
  ],
]
`;

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the QuotesReceived event 1`] = `
Array [
  Array [
    "Unified SwapBridge Quotes Received",
    Object {
      "action_type": "crosschain-v1",
      "best_quote_provider": "provider_bridge2",
      "can_submit": false,
      "chain_id_destination": null,
      "chain_id_source": "eip155:1",
      "custom_slippage": false,
      "gas_included": false,
      "initial_load_time_all_quotes": 0,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "provider_bridge",
      "quoted_time_minutes": 10,
      "quotes_count": 0,
      "quotes_list": Array [],
      "refresh_count": 0,
      "slippage_limit": undefined,
      "swap_type": "crosschain",
      "token_address_destination": null,
      "token_address_source": "eip155:1/slip44:60",
      "usd_quoted_gas": 0,
      "usd_quoted_return": 100,
      "warnings": Array [
        "warning1",
      ],
    },
  ],
]
`;

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the SnapConfirmationViewed event 1`] = `
Array [
  Array [
    "Unified SwapBridge Snap Confirmation Page Viewed",
    Object {
      "action_type": "crosschain-v1",
      "chain_id_destination": null,
      "chain_id_source": "eip155:1",
      "custom_slippage": false,
      "is_hardware_wallet": false,
      "slippage_limit": undefined,
      "swap_type": "crosschain",
      "token_address_destination": null,
      "token_address_source": "eip155:1/slip44:60",
    },
  ],
]
`;

exports[`BridgeController trackMetaMetricsEvent client-side calls should track the Submitted event 1`] = `
Array [
  Array [
    "Unified SwapBridge Submitted",
    Object {
      "action_type": "crosschain-v1",
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "gas_included": false,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "provider_bridge",
      "quoted_time_minutes": 0,
      "stx_enabled": false,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/slip44:60",
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "usd_quoted_gas": 0,
      "usd_quoted_return": 0,
    },
  ],
]
`;

exports[`BridgeController updateBridgeQuoteRequestParams should only poll once if insufficientBal=true 1`] = `
Array [
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "crosschain-v1",
      "input": "chain_source",
      "value": "eip155:1",
    },
  ],
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "crosschain-v1",
      "input": "chain_destination",
      "value": "eip155:10",
    },
  ],
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "crosschain-v1",
      "input": "token_destination",
      "value": "eip155:10/erc20:0x123",
    },
  ],
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "crosschain-v1",
      "input": "slippage",
      "value": 0.5,
    },
  ],
  Array [
    "Unified SwapBridge Quotes Requested",
    Object {
      "action_type": "crosschain-v1",
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "error_message": null,
      "has_sufficient_funds": true,
      "is_hardware_wallet": false,
      "security_warnings": Array [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/erc20:0x123",
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "warnings": Array [],
    },
  ],
  Array [
    "Unified SwapBridge Quotes Received",
    Object {
      "action_type": "crosschain-v1",
      "best_quote_provider": "provider_bridge2",
      "can_submit": true,
      "chain_id_destination": "eip155:10",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "gas_included": false,
      "initial_load_time_all_quotes": 11000,
      "is_hardware_wallet": false,
      "price_impact": 0,
      "provider": "provider_bridge",
      "quoted_time_minutes": 10,
      "quotes_count": 2,
      "quotes_list": Array [
        "lifi_across",
        "lifi_celercircle",
      ],
      "refresh_count": 1,
      "slippage_limit": 0.5,
      "swap_type": "crosschain",
      "token_address_destination": "eip155:10/erc20:0x123",
      "token_address_source": "eip155:1/slip44:60",
      "usd_quoted_gas": 0,
      "usd_quoted_return": 100,
      "warnings": Array [
        "warning1",
      ],
    },
  ],
]
`;

exports[`BridgeController updateBridgeQuoteRequestParams should trigger quote polling if request is valid 1`] = `
Array [
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "crosschain-v1",
      "input": "chain_source",
      "value": "eip155:1",
    },
  ],
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "crosschain-v1",
      "input": "chain_destination",
      "value": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
    },
  ],
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "crosschain-v1",
      "input": "token_destination",
      "value": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
    },
  ],
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "crosschain-v1",
      "input": "slippage",
      "value": 0.5,
    },
  ],
  Array [
    "Unified SwapBridge Quotes Requested",
    Object {
      "action_type": "crosschain-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "error_message": null,
      "has_sufficient_funds": true,
      "is_hardware_wallet": false,
      "security_warnings": Array [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "warnings": Array [],
    },
  ],
  Array [
    "Unified SwapBridge Quotes Requested",
    Object {
      "action_type": "crosschain-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "error_message": null,
      "has_sufficient_funds": true,
      "is_hardware_wallet": false,
      "security_warnings": Array [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "warnings": Array [],
    },
  ],
  Array [
    "Unified SwapBridge Quotes Requested",
    Object {
      "action_type": "crosschain-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "error_message": null,
      "has_sufficient_funds": true,
      "is_hardware_wallet": false,
      "security_warnings": Array [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "warnings": Array [],
    },
  ],
  Array [
    "Unified SwapBridge Quote Error",
    Object {
      "action_type": "crosschain-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "error_message": "Network error",
      "has_sufficient_funds": true,
      "is_hardware_wallet": false,
      "security_warnings": Array [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "warnings": Array [],
    },
  ],
]
`;

exports[`BridgeController updateBridgeQuoteRequestParams should update the quoteRequest state 1`] = `
Array [
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "crosschain-v1",
      "input": "chain_source",
      "value": "eip155:1",
    },
  ],
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "swapbridge-v1",
      "input": "chain_destination",
      "value": "eip155:10",
    },
  ],
  Array [
    "Unified SwapBridge Input Changed",
    Object {
      "action_type": "crosschain-v1",
      "input": "slippage",
      "value": 0.5,
    },
  ],
]
`;
